--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1{
     text-align: center;
     color: green;
     background-size: contain;
+    height: 50px;
 }
 .navbar ul{
     list-style-type: none;
@@ -41,6 +42,7 @@ h1{
 .navbar li{
     float: left;
 }
+
 .navbar a:hover{
     background-color: rgb(255, 255, 255);
 }
@@ -48,10 +50,69 @@ h1{
 body{
     margin: 20px;
 }
+#farmer1 {
+    float: right;
+}
+
+/*lets style the registration form*/
+
+.form {
+    max-width: 500px;
+    margin: 20px auto;
+    padding: 0px;
+    background: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(59, 58, 58, 0.1);
+    font-family: Arial, sans-serif;
+}
+label {
+    display: block;
+    margin-bottom: 5px;
+    margin-right: 10px;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #050000;
+}
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 25%;
+    padding: 1px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+input:focus,
+textarea:focus {
+    border-color: #007BFF;
+    outline: none;
+}
+textarea {
+    height: 100px;
+    
+}
+button {
+    width: 100%;
+    margin-top: 20px;
+    padding: 12px;
+    background: #71e8d4;
+    color: rgb(8, 0, 0);
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+button:hover {
+    background: #09ea01;
+}
+
+/*FORM styling ended here*/
 
 footer{
     background-color: rgb(223, 190, 149);
- 
-    font-size: 10;
-  
+    border-style: inset;
+    font-family: monospace;
+    white-space: normal;
 }
